remove 501 till we are get approval

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ extends ./layouts/default
 block content
   div.Hacks-Typography
     h1 About Us
-    p Hacks for Snacks is a 501(c)(3) non-profit with one goal, to make the lives of local kids better.
+    p Hacks for Snacks is an organization with one goal, to make the lives of local kids better.
     p We aim to help children by:
     ol 
       li Educating & nurturing curiousity and experimentation in the exciting field of robotics and programming.
