--- a/compiled/public/stylesheets/styles.css
+++ b/compiled/public/stylesheets/styles.css
@@ -57,8 +57,8 @@
   height: 130px;
 }
 
-.Hacks-Typography {
-  line-height: 150%;
+.Hacks-Typography p, .Hacks-Typography ul, .Hacks-Typography ol {
+  line-height: 1.8em;
 }
 
 .Hacks-Typography a {
