--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -16,7 +16,7 @@ html
         div.Header__navigation
           a(href='/index.html', class= path == 'index.jade' ? 'active' : null) ABOUT US
           a(href='/hackathons.html', class= path == 'hackathons.jade' ? 'active' : null) HACKATHONS
-          a(href='mailto:info@hacksforsnacks.com') SPONSOR
+          a(href='/sponsor.html', class= path == 'sponsor.jade' ? 'active' : null) SPONSOR
 
       div.Content
         block content 
