--- a/src/public/stylesheets/styles.css
+++ b/src/public/stylesheets/styles.css
@@ -66,7 +66,7 @@
 }
 
 .Content {
-  padding: 0 8px;
+  padding: 8px;
 }
 
 .Footer {
@@ -93,6 +93,19 @@
   height: 16px;
   opacity: 0.5;
 }
+
+.Body {
+  display: flex;
+}
+
+.Content {
+  flex: 3;
+}
+
+.Sidebar {
+  flex: 1;
+}
+
 @media (max-width: 940px) {
   .Header {
     flex-direction: column;
