--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -4,6 +4,7 @@ html
     link(href='http://fonts.googleapis.com/css?family=Lato:400,700', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='/public/stylesheets/normalize.css')
     link(rel='stylesheet', href='/public/stylesheets/styles.css')
+    link(rel='shortcut icon', href='/favicon.ico')
     meta(name='viewport', content='initial-scale=1.0, width=device-width')
   body
     div.Hacks-For-Snacks
