feature(sign up forms)

--- a/compiled/public/stylesheets/styles.css
+++ b/compiled/public/stylesheets/styles.css
@@ -17,6 +17,8 @@
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  color: #787A76;
+  text-decoration: none;
   padding-bottom: 16px;
 }
 
@@ -40,7 +42,7 @@
 
 .Header__navigation a {
   display: inline-block;
-  margin: 0 16px;
+  margin: 0 8px;
   font-size: 14px;
   color: #6A6A6A;
   text-decoration: none;
@@ -119,6 +121,12 @@
 }
 
 @media (max-width: 940px) {
+  .Body {
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+
   .Header {
     -webkit-flex-direction: column;
         -ms-flex-direction: column;
