--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -9,7 +9,7 @@ html
   body
     div.Hacks-For-Snacks
       div.Header
-        div.Header__logo
+        a(href='/').Header__logo
           img(src='/public/images/dieter-the-robot.svg').Header__dieter-the-robot
           div.Header__logo-wording
             div.Header__logo-wording-title HACKS for SNACKS
@@ -17,11 +17,39 @@ html
         div.Header__navigation
           a(href='/index.html', class= path == 'index.jade' ? 'active' : null) ABOUT US
           a(href='/hackathons.html', class= path == 'hackathons.jade' ? 'active' : null) HACKATHONS
-          a(href='/sponsor.html', class= path == 'sponsor.jade' ? 'active' : null) SPONSOR
+          a(href='/sponsor.html', class= path == 'sponsor.jade' ? 'active' : null) SPONSORS
+          a(href='/developers.html', class= path == 'developers.jade' ? 'active' : null) DEVELOPERS
+      div.Body
+        div.Content
+          block content 
+        div.Sidebar.
+          <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+          <style>
+          #mc_embed_signup {
+              padding-top: 16px;
+          }
 
-      div.Content
-        block content 
+          #mc_embed_signup form {
+            padding: 0 8px;
+          }
 
+          #mc_embed_signup input.email {
+            width: 100%;
+          }
+          </style>
+          <div id="mc_embed_signup">
+            <form action="//merrickchristensen.us6.list-manage.com/subscribe/post?u=bf869d43724e451efd50d12ed&amp;id=e0adfa7338" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <label for="mce-EMAIL">Sign up here to attend Hacks&nbsp;for&nbsp;Snacks!</label>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_bf869d43724e451efd50d12ed_e0adfa7338" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+              </div>
+            </form>
+          </div>
+
+          <!--End mc_embed_signup-->
       div.Footer
         div.Footer__text We <3 You!
         div.Footer__social
