--- a/src/index.jade
+++ b/src/index.jade
@@ -4,15 +4,15 @@ block content
   div.Hacks-Typography
     h1 About Us
     p Hacks for Snacks is an organization with one goal, to make the lives of local kids better.
-    p We aim to help children by:
+    p We aim to help youth by:
     ol 
-      li Educating & nurturing curiousity and experimentation in the exciting field of robotics and programming.
-      li Feeding less priviledged kids in the community with the resources raised by a Hacks for Snacks hackathon.
+      li Educating & nurturing curiosity and experimentation in the exciting field of robotics and programming.
+      li Feeding less privileged kids in the community with the resources raised by a Hacks for Snacks hackathon.
 
     h1 What is a Hacks for Snacks Hackathon?
-    p A Hacks for Snacks hackathon is an event where local technical professionals pair up with a team of kids and tackle a programming challenge, usually involving robots. We use hardware that is fun, engaging and designed to help kids get started with programming and electronics. Kids will leave with knowledge they can use at home to continue learning and creating things.
+    p A Hacks for Snacks hackathon is an event where local technical professionals pair up with a team of kids and tackle a programming challenge, usually involving robots. We use hardware that is fun, engaging and designed to help kids get started with programming and electronics. Kids will leave with knowledge they can use at home to continue learning and creating.
     h2 Who should attend?
-    p Kids from the ages of 8-18. No programming or robotics experience is required.
+    p Youth ages 8-18. No programming or robotics experience is required.
     h2 What kinds of things are taught?
     ul
       li Ages 8-12: 
@@ -28,7 +28,7 @@ block content
       li Ages 16-18: 
         a(href='http://www.arduino.cc/') Arduino
     h2 How much does it cost?
-    p Snacks! We ask that kids bring at least 5 BackPacks which will be distributed by the local food shelter. That being said, if a child can not meet these requirements she or he is still more than welcome to be involved.
+    p Snacks! We ask that kids bring at least 5 BackPacks which will be distributed by the local food shelter. That being said, if a child can not meet these requirements she or he is still more than welcome to be involved. Just bring what you can, even if that is nothing, your kid is always 100% welcome.
     h2 What is a BackPack? 
     p A BackPack is a Ziploc bag of at least 7 of the following items:
     ul
