--- a/src/index.jade
+++ b/src/index.jade
@@ -28,7 +28,7 @@ block content
       li Ages 16-18: 
         a(href='http://www.arduino.cc/') Arduino
     h2 How much does it cost?
-    p Snacks! We ask that kids bring at least 5 BackPacks which will be distributed by the local food shelter. That being said, if a child can not meet these requirements she or he is still more than welcome to be involved. Just bring what you can, even if that is nothing, your kid is always 100% welcome.
+    p Snacks! We ask that kids bring at least 5 BackPacks which will be distributed by the local food shelter. That being said, if a child can not meet these requirements she or he is still more than welcome to be involved. Just bring what you can, even if that is nothing, your child is always 100% welcome.
     h2 What is a BackPack? 
     p A BackPack is a Ziploc bag of at least 7 of the following items:
     ul
