--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -6,6 +6,8 @@ html
     link(rel='stylesheet', href='/public/stylesheets/styles.css')
     link(rel='shortcut icon', href='/favicon.ico')
     meta(name='viewport', content='initial-scale=1.0, width=device-width')
+    meta(name='description', content='Hacks for Snacks is a charitable organization that educates youth about technology while feeding less privileged children.')
+    meta(name='og:image', content='http://www.hacksforsnacks.com/public/images/dieter.png')
   body
     div.Hacks-For-Snacks
       div.Header
