--- a/src/sponsor.jade
+++ b/src/sponsor.jade
@@ -15,3 +15,7 @@ block content
     p Or cash to purchase the above hardware. Cash is also useful to make the events more enjoyable with snacks, drinks and prizes.
     p All payment for each event comes in the form of resources for the local food shelter. If you are interested in sponsoring us please reach out to 
       a(href='mailto:info@hacksforsnacks.com') info@hacksforsnacks.com.
+    h1 Sponsors
+    div.Sponsors
+      a(href='http://www.ardusat.com/')
+        img(src='/public/images/sponsors/ardusat.jpg')
