add form and style

--- a/src/hackathons.jade
+++ b/src/hackathons.jade
@@ -1,8 +1,10 @@
 extends ./layouts/default
 
 block content
-  div.Hacks-Typography
-    h1 Hackathons
-    p We are still working hard to get the right sponsors in place to start hosting events.
-    p If you are a developer or sponsor and would like to help, 
-      a(href='mailto:info@hacksforsnacks.com') get in touch!
+  div.Content
+    div.Hacks-Typography
+      h1 Hackathons
+      p We are still working hard to get the right sponsors in place to start hosting events.
+      p If you are a developer or sponsor and would like to help, 
+        a(href='mailto:info@hacksforsnacks.com') get in touch!
+  include ./includes/sidebar
