polish the register form and add it to navigation

--- a/src/layouts/default.jade
+++ b/src/layouts/default.jade
@@ -22,6 +22,7 @@ html
           a(href='/hackathons.html', class= path == 'hackathons.jade' ? 'active' : null) HACKATHONS
           a(href='/sponsor.html', class= path == 'sponsor.jade' ? 'active' : null) SPONSORS
           a(href='/developers.html', class= path == 'developers.jade' ? 'active' : null) DEVELOPERS
+          a(href='/register.html', class= path == 'register.jade' ? 'active' : null) REGISTER
       div.Body
         block content 
       div.Footer
