--- a/compiled/public/stylesheets/styles.css
+++ b/compiled/public/stylesheets/styles.css
@@ -155,6 +155,14 @@ input.Registration-Age[type="text"] {
   border-radius: 4px;
 }
 
+.Registration-Errors p:first-child{
+  margin-top: 0;
+}
+
+.Registration-Errors {
+  color: #E4584F;
+}
+
 .Registration-Radio {
   padding-bottom: 8px;
 }
