--- a/src/register.jade
+++ b/src/register.jade
@@ -44,6 +44,17 @@ block content
           Startup Ogden<br>
           2314 Washington Blvd., Ogden, Utah<br>
           http://www.weber.edu/downtown 
+        div.Registration-Social.
+          <div class="fb-share-button" data-href="http://www.hacksforsnacks.com/register" data-layout="button_count"></div>
+          <div id="fb-root"></div>
+          <script>(function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s); js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));</script>
+          
   script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.9/angular.min.js')
   script(src='/public/scripts/registration.js')
 
