register page link to building

--- a/src/register.jade
+++ b/src/register.jade
@@ -43,7 +43,7 @@ block content
         p. 
           Startup Ogden<br>
           2314 Washington Blvd., Ogden, Utah<br>
-          http://www.weber.edu/downtown 
+          <a href="http://www.weber.edu/downtown">http://www.weber.edu/downtown</a>
         div.Registration-Social.
           <div class="fb-share-button" data-href="http://www.hacksforsnacks.com/register" data-layout="button_count"></div>
           <div id="fb-root"></div>
