improve the developer page

--- a/src/developers.jade
+++ b/src/developers.jade
@@ -4,7 +4,7 @@ block content
   div.Content
     div.Hacks-Typography
       h1 Developers
-      p Hacks for Snacks needs developers who are willing to volunteer at hackathons. This entails leading a team of kids through a programming challenge. You don't need proficiency in the following areas to volunteer, but here are some of the things we teach kids!
+      p Hacks for Snacks needs developers who are willing to volunteer at hackathons. This entails leading a team of kids through a programming challenge. You don't need proficiency in the following areas to volunteer, (you may even learn a thing or two yourself!), but here are some of the things we teach kids! 
       ul
         li: a(href='http://www.snapcircuits.net/') SnapCircuits
         li: a(href='http://www.lego.com/en-us/mindstorms/?domainredir=mindstorms.lego.com') Lego MindStorms
@@ -12,6 +12,12 @@ block content
         li: a(href='http://www.arduino.cc/') Wearable Technology - Jewelry and Clothes
         li: a(href='http://ardrone2.parrot.com/') ARDrone
         li: a(href='http://www.arduino.cc/') Arduino
+      h3 What is the time commitment?
+      p As much or little as you want! A hackathon is a just a few hours long and there is no preparation required!
+      h3 Can I bring my kids?
+      p Ofcourse! We would love for you to make it a family event!
+      h3 Thank you!
+      p We know you are very busy, and have opportunities being thrown at you every week. But, Hacks for Snacks is your chance to give back.
       div.
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
