improve developer copy

--- a/src/developers.jade
+++ b/src/developers.jade
@@ -4,7 +4,15 @@ block content
   div.Content
     div.Hacks-Typography
       h1 Developers
-      p Hacks for Snacks needs developers who are willing to volunteer at hackathons. This entails leading a team of kids through a programming challenge. You don't need proficiency in the following areas to volunteer, (you may even learn a thing or two yourself!), but here are some of the things we teach kids! 
+      p We invite you to come and mentor a team of kids through a set of programming & hardware challenges. We believe that few things create as much exhilaration as manipulating the outside world with your mind. Odds are you know exactly the thrill I'm talking about. You know, when you wrote your first "hello world" program? We believe that the modern day "hello world" program is making a robot move or blinking an LED. You may not have experienced these things yourself yet, and thats ok! That's exactly what we want to invite you to come and do. And as you do it, you'll be "team lead" for a group of kids who have little to no programming experience. You'll walk through setting up basic circuits, programming drones to fly and rolling around a robotic ball in your favorite programming language. As you walk through it, you'll help a new generation of programmers prepare for for their future!
+      h3 Do I need any prior hardware experience?
+      p No! In fact we invite you to come and learn. You may feel ill equipped to journey through these challenges with a team of kids, but if you can open up a text editor and code you are prepared to start this journey and mentor a team of kids while you're at it!
+      p There is a staff of programmers with hardware and software experience that will be there to help you and your team through each challenge if you get stuck.
+      h3 What is the time commitment?
+      p As much or little as you want! A hackathon is a just a few hours long and there is no preparation required!
+      h3 Can I bring my kids?
+      p Ofcourse! We would love for you to make it a family event!
+      h3 What kinds of things do you teach?
       ul
         li: a(href='http://www.snapcircuits.net/') SnapCircuits
         li: a(href='http://www.lego.com/en-us/mindstorms/?domainredir=mindstorms.lego.com') Lego MindStorms
@@ -12,10 +20,6 @@ block content
         li: a(href='http://www.arduino.cc/') Wearable Technology - Jewelry and Clothes
         li: a(href='http://ardrone2.parrot.com/') ARDrone
         li: a(href='http://www.arduino.cc/') Arduino
-      h3 What is the time commitment?
-      p As much or little as you want! A hackathon is a just a few hours long and there is no preparation required!
-      h3 Can I bring my kids?
-      p Ofcourse! We would love for you to make it a family event!
       h3 Thank you!
       p We know you are very busy, and have opportunities being thrown at you every week. But, Hacks for Snacks is your chance to give back.
       div.
