--- a/src/includes/sidebar.jade
+++ b/src/includes/sidebar.jade
@@ -1,28 +1,38 @@
-div.Sidebar.
-  <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-  <style>
-  #mc_embed_signup {
-      padding-top: 16px;
-  }
+div.Sidebar
+  div.SidebarEmailForm.
+    <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+    <style>
+    #mc_embed_signup {
+        padding-top: 16px;
+    }
 
-  #mc_embed_signup form {
-    padding: 0 8px;
-  }
+    #mc_embed_signup form {
+      padding: 0;
+    }
 
-  #mc_embed_signup input.email {
-    width: 100%;
-  }
-  </style>
-  <div id="mc_embed_signup">
-    <form action="//merrickchristensen.us6.list-manage.com/subscribe/post?u=bf869d43724e451efd50d12ed&amp;id=e0adfa7338" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL">Sign up to receive information about Hacks&nbsp;for&nbsp;Snacks events!</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;"><input type="text" name="b_bf869d43724e451efd50d12ed_e0adfa7338" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-      </div>
-    </form>
-  </div>
-
-        <!--End mc_embed_signup-->
+    #mc_embed_signup input.email {
+      width: 100%;
+    }
+    </style>
+    <div id="mc_embed_signup">
+      <form action="//merrickchristensen.us6.list-manage.com/subscribe/post?u=bf869d43724e451efd50d12ed&amp;id=e0adfa7338" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+          <label for="mce-EMAIL">Sign up to receive information about Hacks&nbsp;for&nbsp;Snacks events!</label>
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;"><input type="text" name="b_bf869d43724e451efd50d12ed_e0adfa7338" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+      </form>
+    </div>
+    <!--End mc_embed_signup-->
+  h4 Next Event
+  h5 Date & Time
+  p.
+    March 28, 2015<br>
+    10:00 AM - 2:00 PM
+  h5 Location
+  p. 
+    Startup Ogden<br>
+    2314 Washington Blvd., Ogden, Utah<br>
+    <a href="http://www.weber.edu/downtown">http://www.weber.edu/downtown</a>
