--- a/src/public/stylesheets/styles.css
+++ b/src/public/stylesheets/styles.css
@@ -6,6 +6,10 @@
   margin: 0 auto;
 }
 
+.Hacks-For-Snacks a {
+  color: #787A76;
+}
+
 .Header {
   display: flex;
   border-bottom: 1px solid #CACAC5;
