add photo to developers page

--- a/compiled/public/stylesheets/styles.css
+++ b/compiled/public/stylesheets/styles.css
@@ -80,6 +80,15 @@
   padding: 8px;
 }
 
+.ContentImage {
+  max-width: 100%;
+  margin: 8px;
+}
+
+.FloatRightImage {
+  float:right;
+}
+
 .Footer {
   padding: 8px 0;
   border-top: 1px solid #CACAC5; 
@@ -120,6 +129,7 @@
 }
 
 .Sidebar {
+  margin-left: 16px;
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -268,5 +278,10 @@ input.Registration-Age[type="text"] {
   .Registration-Information {
     padding-left: 0;
     padding-top: 32px;
+  }
+  
+  .FloatRightImage {
+    float: inherit;
+    margin: 8px 0;
   }
 }
