--- a/src/developers.jade
+++ b/src/developers.jade
@@ -4,6 +4,7 @@ block content
   div.Content
     div.Hacks-Typography
       h1 Developers
+      img(src='/public/images/hardware.jpg').ContentImage.FloatRightImage
       p We invite you to come and mentor a team of kids through a set of programming & hardware challenges. We believe that few things create as much exhilaration as manipulating the outside world with your mind. Odds are you know exactly the thrill I'm talking about. You know, when you wrote your first "hello world" program? We believe that the modern day "hello world" program is making a robot move or blinking an LED. You may not have experienced these things yourself yet, and thats ok! That's exactly what we want to invite you to come and do. And as you do it, you'll be "team lead" for a group of kids who have little to no programming experience. You'll walk through setting up basic circuits, programming drones to fly and rolling around a robotic ball in your favorite programming language. As you walk through it, you'll help a new generation of programmers prepare for for their future!
       h3 Do I need any prior hardware experience?
       p No! In fact we invite you to come and learn. You may feel ill equipped to journey through these challenges with a team of kids, but if you can open up a text editor and code you are prepared to start this journey and mentor a team of kids while you're at it!
