--- a/src/public/stylesheets/styles.css
+++ b/src/public/stylesheets/styles.css
@@ -82,7 +82,7 @@
 }
 
 .FloatRightImage {
-  float:right;
+  float: right;
 }
 
 .Footer {
@@ -254,6 +254,10 @@ input.Registration-Age[type="text"] {
     padding-top: 32px;
   }
   
+}
+
+
+@media (max-width: 640px) {
   .FloatRightImage {
     float: inherit;
     margin: 8px 0;
