change sidebar look

--- a/src/includes/sidebar.jade
+++ b/src/includes/sidebar.jade
@@ -17,7 +17,7 @@ div.Sidebar
     <div id="mc_embed_signup">
       <form action="//merrickchristensen.us6.list-manage.com/subscribe/post?u=bf869d43724e451efd50d12ed&amp;id=e0adfa7338" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
-          <label for="mce-EMAIL">Sign up to receive information about Hacks&nbsp;for&nbsp;Snacks events!</label>
+          <h4>Sign up to receive Hacks&nbsp;for&nbsp;Snacks information!</h4>
           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;"><input type="text" name="b_bf869d43724e451efd50d12ed_e0adfa7338" tabindex="-1" value=""></div>
