--- a/src/developers.jade
+++ b/src/developers.jade
@@ -25,7 +25,7 @@ block content
         li: a(href='http://ardrone2.parrot.com/') ARDrone
         li: a(href='http://www.arduino.cc/') Arduino
       h3 Thank you!
-      p We know you are very busy, and have opportunities being thrown at you every week. But, Hacks for Snacks is your chance to give back.
+      p We know you are very busy, and have opportunities being thrown at you every week. But, Hacks for Snacks is your chance to give back. You'll have the opportunity to learn about hardware, mentor the next generation of programmers & feed less fortunate youth!
       div.
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
