add code wall image

--- a/src/register.jade
+++ b/src/register.jade
@@ -5,6 +5,8 @@ block content
     div.Hacks-Typography
       h1 Hacks for Snacks + Ogden
       p We invite your child to come and explore the exciting world of programming and robotics. They will receive personal mentorship and guidance from local professionals and leave with excitement and skills for a future of creating! 
+      p
+        img(src="/public/images/code-wall.jpg").ContentImage
       h3 Why should I send my child?
       p Did you know that each month the tech industry adds about 9,600 jobs in the United States! By 2022 its projected that there will be more than 1.7 million developer and programmer specific jobs with an average salary of $83,000. Unfortunately, computer science has seen a decline in interest! If you're wondering how to spark a technical interest in your child, watch their eyes when they fly a drone with code!
       h3 Whats with the "snacks" part?
