spruce up the home page

--- a/src/index.jade
+++ b/src/index.jade
@@ -9,27 +9,15 @@ block content
       ol 
         li Educating & nurturing curiosity and experimentation in the exciting field of robotics and programming.
         li Feeding less privileged kids in the community with the resources raised by a Hacks for Snacks hackathon.
-      h1 What is a Hacks for Snacks Hackathon?
+      p
+        img(src='/public/images/happy-kid-coding.jpg').ContentImage
+      h3 What is a Hacks for Snacks Hackathon?
       p A Hacks for Snacks hackathon is an event where local technical professionals pair up with a team of kids and tackle a programming challenge, usually involving robots. We use hardware that is fun, engaging and designed to help kids get started with programming and electronics. Kids will leave with knowledge they can use at home to continue learning and creating.
-      h2 Who should attend?
-      p Youth ages 8-18. No programming or robotics experience is required.
-      h2 What kinds of things are taught?
-      ul
-        li Ages 8-12: 
-          a(href='http://www.snapcircuits.net/') SnapCircuits
-        li Ages 10-14: 
-          a(href='http://www.lego.com/en-us/mindstorms/?domainredir=mindstorms.lego.com') Lego MindStorms
-        li Ages 14-18: 
-          a(href='http://www.gosphero.com/') Sphero
-        li Ages 14-18: 
-          a(href='http://www.arduino.cc/') Wearable Technology - Jewelry and Clothes
-        li Ages 16-18: 
-          a(href='http://ardrone2.parrot.com/') ARDrone
-        li Ages 16-18: 
-          a(href='http://www.arduino.cc/') Arduino
+      h3 Why?
+      p Did you know that each month the tech industry adds about 9,600 jobs in the United States! By 2022 its projected that there will be more than 1.7 million developer and programmer specific jobs with an average salary of $83,000. Unfortunately, computer science has seen a decline in interest! If you're wondering how to spark a technical interest in your child, watch their eyes when they fly a drone with code!
       h2 How much does it cost?
       p Snacks! We ask that kids bring at least 5 BackPacks which will be distributed by the local food shelter. That being said, if a child can not meet these requirements she or he is still more than welcome to be involved. Just bring what you can, even if that is nothing, your child is always 100% welcome.
-      h2 What is a BackPack? 
+      h3 What is a BackPack? 
       p A BackPack is a Ziploc bag of at least 7 of the following items:
       ul
         li Fruit Snack
@@ -42,8 +30,8 @@ block content
       p These kits go to kids who usually eat breakfast and lunch at their schools, qualifying for reduced or free lunch; and they often go home over the weekend not having a lot to eat. Thus, these snack bags come in to help them eat over the weekend. 
       p For more information about these BackPacks see the 
         a(href='https://www.utahfoodbank.org/backpack') Utah Food Bank website.
-      h2 Who distributes them?
-      p The local food shelter Community Action Services and Food Bank to children who qualify.
-      p 
-        img(src='/public/images/logo.png')
+      h3 Who distributes them?
+      p The local food shelter to children who qualify.
+      h3 Whats with the "snacks" part?
+      p While, a certain set of youth are priviledged to be able to attend events like this, there is a less fortunate group who are worried about their survival needs. According to Feed America, 1 in 5 kids battle to find enough food.
   include ./includes/sidebar.jade
