--- a/src/register.jade
+++ b/src/register.jade
@@ -11,6 +11,8 @@ block content
       p Did you know that each month the tech industry adds about 9,600 jobs in the United States! By 2022 its projected that there will be more than 1.7 million developer and programmer specific jobs with an average salary of $83,000. Unfortunately, computer science has seen a decline in interest! If you're wondering how to spark a technical interest in your child, watch their eyes when they fly a drone with code!
       h3 Whats with the "snacks" part?
       p While, a certain set of youth are priviledged to be able to attend events like this, there is a less fortunate group who are worried about their survival needs. In Ogden 23.4% of households with children were unable to buy enough food. Hacks for Snacks hopes to relieve some of this suffering while equipping a new generation with job skills.
+      h3 Who should attend?
+      p Youth ages 11-18. No programming or robotics experience is required.
       h3 Register your Child
     div.Registration
       div.Registration-Form(ng-app='Registration', ng-controller='RegistrationForm', ng-submit='submit($event)')
